--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "backend": "json-server --watch database/agenda.json"
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "iconify": "^1.4.0",
+    "json-server": "^1.0.0-beta.1",
     "vue": "^3.4.29",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.3"
