--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@iconify/tailwind": "^1.1.2",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
