--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "backend": "json-server --watch database/agenda.json"
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
     "axios": "^1.7.3",
