--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@reactivex/rxjs": "^6.6.7",
     "axios": "^1.7.3",
     "iconify": "^1.4.0",
     "json-server": "^1.0.0-beta.1",
+    "rxjs": "^7.8.1",
     "vue": "^3.4.29",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.4.3"
